[tool.poetry]
name = "case-asparagus-2024-tester"
version = "0.1.0"
description = ""
authors = ["Tuvix Shih <tuvix@ninthday.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mysqlclient = "^2.2.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
